# rust-thread-local-collect

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  bench.sh  bench_channeled_bg.sh  bench_i32.sh  bench_i32_group.sh  bench_map.sh  bench_u32.sh  bench_u32_group.sh  gen-doc.sh  test.sh
benches/: benchmark.rs  channeled_bg_benchmark.rs  i32_group_benchmark.rs  map_benchmark.rs  my_benchmark.rs  tlc_benchmark.rs  u32_benchmark.rs  u32_group_benchmark.rs
examples/: channeled_i32_accumulator.rs  channeled_map_accumulator.rs  joined_bad.rs  joined_i32_accumulator.rs  joined_map_accumulator.rs  joined_map_accumulator_bad_explicit.rs  joined_map_accumulator_bad_implicit.rs  joined_map_accumulator_segfault_async.rs  joined_map_accumulator_segfault_async2.rs  joined_map_accumulator_segfault_sync.rs  joined_map_accumulator_segfault_sync2.rs  joined_old_bad.rs  joined_old_try_segfault.rs  joined_old_try_segfault1.rs  probed_i32_accumulator.rs  probed_map_accumulator.rs  simple_joined_i32_accumulator.rs  simple_joined_map_accumulator.rs  tlcr_example.rs  tlcr_i32_accumulator.rs  tlcr_joined_i32_accumulator.rs  tlcr_joined_map_accumulator.rs  tlcr_map_accumulator.rs  tlcr_old_i32_accumulator.rs  tlcr_old_map_accumulator.rs  tlcr_probed_i32_accumulator.rs  tlcr_probed_map_accumulator.rs  tlm_channeled_i32_accumulator.rs  tlm_channeled_map_accumulator.rs  tlm_joined_bad.rs  tlm_joined_i32_accumulator.rs  tlm_joined_map_accumulator.rs  tlm_joined_map_accumulator_send.rs  tlm_probed_i32_accumulator.rs  tlm_probed_map_accumulator.rs  tlm_simple_joined_i32_accumulator.rs  tlm_simple_joined_map_accumulator.rs  tlmrestr_joined_i32_accumulator.rs  (+11 more)
(+83 files in other folders)
