[package]
name = "thread_local_collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
thread_local = { version = "1.1", optional = true }

[features]
tlcr = ["dep:thread_local"]

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "i32_group_benchmark"
harness = false
