[package]
name = "thread_local_collect"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Supports the collection and aggregation of thread-local data across threads."
repository = "https://github.com/pvillela/rust-thread-local-collect/tree/main"
readme = "README.md"
keywords = ["thread-local"]
categories = ["concurrency"]
exclude = [
    "benches/targets",
    "examples/*map*.rs",
    "examples/tlm_joined_bad.rs",
    "CHANGELOG.md",
    "*.sh",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = { version = "1.0", optional = true }
thread_local = { version = "1.1", optional = true }

[features]
tlcr = ["dep:thread_local", "dep:thiserror"]

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "i32_group_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
